--- a/packages/flutterfire_cli/pubspec.yaml
+++ b/packages/flutterfire_cli/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   pub_updater: ^0.2.2
   pubspec: ^2.1.0
   xml: ^5.3.1
+  
+dependency_overrides:
+  dart_console: 1.0.0
 
 dev_dependencies:
   test: ^1.16.0
